tests/snapshots/integration__integration_tests__merge__readme_example_hooks_pre_merge.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mSquashing 3 commits into 1[0m (2 files, [32m+45[0m)...
🔄 [36mGenerating squash commit message...[0m
[107m [0m  [1mfeat(api): Add user authentication endpoints[0m
[107m [0m  
[107m [0m  Implement login and token refresh endpoints with JWT validation.
[107m [0m  Includes comprehensive test coverage and input validation.
✅ [32mSquashed @ [2m[SHA][0m
🔄 [36mRunning pre-merge [1mtest[0m:[0m
[107m [0m  [1m[34muv[0m run pytest[0m
🔄 [36mRunning pre-merge [1mlint[0m:[0m
[107m [0m  [1m[34muv[0m run ruff check[0m
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[SHA][0m (no rebase needed)
[107m [0m  * [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature-auth[m[33m)[m feat(api): Add user authentication endpoints
[107m [0m   api/auth.py        | 31 [32m+++++++++++++++++++++++++++++++[m
[107m [0m   tests/test_auth.py | 14 [32m++++++++++++++[m
[107m [0m   2 files changed, 45 insertions(+)
✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 2 files, [32m+45[0m)
🔄 [36mRemoving worktree & branch...[0m
✅ [32mRemoved worktree & branch for [1m[32mfeature-auth[0m[32m, changed directory to [1m[32m[REPO][0m[0m

----- stderr -----
[0m
============================= test session starts ==============================
collected 3 items

tests/test_auth.py::test_login_success PASSED                            [ 33%]
tests/test_auth.py::test_login_invalid_password PASSED                   [ 66%]
tests/test_auth.py::test_token_validation PASSED                         [100%]

============================== 3 passed in 0.8s ===============================

[0m
All checks passed!
