tests/snapshots/integration__integration_tests__merge__readme_example_simple.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[SHA][0m (no commit/squash/rebase needed)
[107m [0m  * [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfix-auth[m[33m)[m Implement JWT validation
[107m [0m   auth.rs | 13 [32m+++++++++++++[m
[107m [0m   1 file changed, 13 insertions(+)
✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 1 file, [32m+13[0m)
🔄 [36mRemoving worktree & branch...[0m
✅ [32mRemoved worktree & branch for [1m[32mfix-auth[0m[32m, changed directory to [1m[32m[REPO][0m[0m

----- stderr -----
